syntax = "proto3";
package pattern;

option csharp_namespace = "Messages";

message Pattern {
    string id = 1;
    Info info = 2;
    Canvas canvas = 3;
    StrandsCount strands_count = 4;
    uint32 width = 5;
    uint32 height = 6;
    repeated StitchConfiguration configurations = 7;
    repeated Stitch stitches = 8;
    repeated Backstitch backstitches = 9;
    repeated Element elements = 10;
}

message Info {
    string title = 1;
    string author = 2;
    string company = 3;
    string copyright = 4;
}

message Canvas {
    string title = 1;
}

message StrandsCount {
    int32 full = 1;
    int32 half = 2;
    int32 quarter = 3;
    int32 three_quarter = 4;
    int32 petit = 5;
    int32 backstitch = 6;
    int32 french_knot = 7;
}

message StitchConfiguration {
    string symbol = 1;
    string hex_color = 2;
}

message Stitch {
    Point point = 1;
    StitchType type = 2;
    int32 configuration_index = 3;
}

message Point {
    int64 X = 1;
    int64 Y = 2;
}

enum StitchType {
    NONE = 0;
    FULL = 1;
    HALF = 2;
    QUARTER = 3;
    THREEQUARTER = 4;
    PETIT = 5;
}

message Backstitch {
    Point start_point = 1;
    Point end_point = 2;
    int32 configuration_index = 3;
}

message Element {
    Point point = 1;
    int32 configuration_index = 2;
    ElementType type = 3;
}

enum ElementType {
    UNDEFINED = 0;
    FRENCHKNOT = 1;
    BEAD = 2;
}
